For a more comprehensive changelog for the latest experimental SVN code, see:
        http://scummvm.svn.sourceforge.net/viewvc/scummvm/?view=log
1.3.0 (????-??-??)
 New Games:
   - Added support for Backyard Baseball.
   - Added support for Backyard Baseball 2001.

 General
   - Added Norwegian (Bokmaal) translation.

 Drascula:
   - Added German and French subtitles in the Von Braun cutscene (#3069981:
     no subtitles in scene with "von Braun").
   - Improved French translation of the game.

 SCI:
   - Improved support for non-English versions of games.

 SCUMM:
   - Improved support for FM-TOWNS versions of games.
 
 PSP:
   - Added image viewer

1.2.1 (2010-12-19)
 General
   - Add Hungarian translation.
   - Add Brazilian Portuguese translation.

 Cruise:
   - Fixed a problem with Raoul appearing when examining the Book

 Groovie:
   - Fixed a regression that made the Russian version of T7G crash.

 Lure:
   - Fixed several NPC movement bugs

1.2.0 (2010-10-15)
 New Games:
   - Added support for Fascination.

 New Games (Sierra SCI0 - SCI1.1):
   - Added support for Castle of Dr. Brain (EGA and VGA).
   - Added support for Codename: ICEMAN.
   - Added support for Conquests of Camelot.
   - Added support for Conquests of the Longbow (EGA and VGA).
   - Added support for EcoQuest: The Search for Cetus.
   - Added support for EcoQuest 2: Lost Secret of the Rainforest.
   - Added support for Freddy Pharkas: Frontier Pharmacist.
   - Added support for Hoyle's Book of Games 1.
   - Added support for Hoyle's Book of Games 2.
   - Added support for Hoyle's Book of Games 3 (EGA and VGA).
   - Added support for Hoyle Classic Card Games.
   - Added support for Jones in the Fast Lane.
   - Added support for King's Quest I (SCI remake).
   - Added support for King's Quest IV (SCI version).
   - Added support for King's Quest V (EGA and VGA).
   - Added support for King's Quest VI (low and hi res).
   - Added support for Laura Bow: The Colonel's Bequest.