@@ -348,6 +348,9 @@ Other contributions
     Catalan:
        Jordi Vilalta Prat
 
+    Danish:
+       Steffen Nyeland
+
     French:
        Thierry Crozat
 
@@ -363,6 +366,9 @@ Other contributions
        Matteo Angelino
 
     Norwegian (Bokmaal):
+       Einar Johan T. Somaae
+
+    Norwegian (Nynorsk):
        Einar Johan T. Somaae
 
     Brazilian Portuguese:
