@@ -392,6 +392,9 @@ static const char *credits[] = {
 "C1""Catalan",
 "C0""Jordi Vilalta Prat",
 "",
+"C1""Danish",
+"C0""Steffen Nyeland",
+"",
 "C1""French",
 "C0""Thierry Crozat",
 "",
@@ -407,6 +410,9 @@ static const char *credits[] = {
 "C0""Matteo Angelino",
 "",
 "C1""Norwegian (Bokm\345l)",
+"C0""Einar Johan T. S\370m\345en",
+"",
+"C1""Norwegian (Nynorsk)",
 "C0""Einar Johan T. S\370m\345en",
 "",
 "C1""Brazilian Portuguese",
