@@ -891,6 +891,9 @@ begin_credits("Credits");
 		begin_section("Catalan");
 			add_person("Jordi Vilalta Prat", "jvprat", "");
 		end_section();
+		begin_section("Danish");
+			add_person("Steffen Nyeland", "", "");
+		end_section();
 		begin_section("French");
 			add_person("Thierry Crozat", "criezy", "");
 		end_section();
@@ -906,6 +909,9 @@ begin_credits("Credits");
 			add_person("Matteo Angelino", "Maff", "");
 		end_section();
 		begin_section("Norwegian (Bokm&aring;l)");
+			add_person("Einar Johan T. S&oslash;m&aring;en", "", "");
+		end_section();
+		begin_section("Norwegian (Nynorsk)");
 			add_person("Einar Johan T. S&oslash;m&aring;en", "", "");
 		end_section();
 		begin_section("Brazilian Portuguese");
